log/build_2024-03-30_10-46-52/custom_counter/stdout_stderr.log
Consolidate compiler generated dependencies of target custom_counter_node
[ 50%] Building CXX object CMakeFiles/custom_counter_node.dir/src/custom_counter_node.cpp.o
/home/robot33-6/student133_ws/src/custom_counter/src/custom_counter_node.cpp:65:3: error: expected ‘}’ at end of input
   65 | };
      |   ^
/home/robot33-6/student133_ws/src/custom_counter/src/custom_counter_node.cpp:6:41: note: to match this ‘{’
    6 | class TestCounter : public rclcpp::Node {
      |                                         ^
/home/robot33-6/student133_ws/src/custom_counter/src/custom_counter_node.cpp: In member function ‘int TestCounter::main(int, char**)’:
/home/robot33-6/student133_ws/src/custom_counter/src/custom_counter_node.cpp:65:1: warning: no return statement in function returning non-void [-Wreturn-type]
   65 | };
      | ^
/home/robot33-6/student133_ws/src/custom_counter/src/custom_counter_node.cpp: At global scope:
/home/robot33-6/student133_ws/src/custom_counter/src/custom_counter_node.cpp:65:3: error: expected unqualified-id at end of input
   65 | };
      |   ^
